humboldt/argocd/nebulosa-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nebulosa-apiserver
  namespace: argocd
  annotations:
    tailscale.com/tailnet-ip: "100.86.215.90"
spec:
  ports:
    - port: 6443
      protocol: TCP
      targetPort: 6443
